crates/pgls_pretty_print/tests/snapshots/single/tests__view_stmt_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/view_stmt_0_100.sql
snapshot_kind: text
---
CREATE VIEW user_view
AS SELECT id, name FROM users;
