crates/pgls_pretty_print/tests/snapshots/single/tests__view_with_check_option_0_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/view_with_check_option_0.sql
snapshot_kind: text
---
create view v
as select * from t
with cascaded check option;
