crates/pgls_pretty_print/tests/snapshots/single/tests__window_def_0_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/window_def_0.sql
snapshot_kind: text
---
SELECT
  id,
  name,
  ROW_NUMBER(

  )
  OVER (
  PARTITION BY dept
  ORDER BY salary DESC)
FROM
  employees;
