crates/pgls_pretty_print/tests/snapshots/single/tests__window_func_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/window_func_0_100.sql
snapshot_kind: text
---
SELECT ROW_NUMBER() OVER ( ORDER BY id) FROM users;
